Bug 401624: Remove support for install.js based xpi bundles. r=bsmedberg, a=schrep